Curso basico de Mongodb

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,3 @@
-/*
-/platzi-api/__pycache__/*
-!/platzi-api
-!README.md
-!requirements.txt
-!.gitignore
+/*/platzi-api/__pycache__/*
+Recursos
+.*pdf
